--- a/src/app/search-page/search-page.component.scss
+++ b/src/app/search-page/search-page.component.scss
@@ -11,6 +11,13 @@
 .filter-block-divider {
   margin: 0 0.5em 0 0.5em;
 }
+.filter-block {
+  flex-direction: column;
+}
+
+.statuses-block {
+  display: flex;
+}
 
 .actions-for-search {
   display: flex;
@@ -19,7 +26,6 @@
 
 .actions-for-filter {
   display: flex;
-
 }
 
 .filter-item {
@@ -40,9 +46,15 @@
 
 .search-field-block {
   padding-top: 0.2em;
-  display: grid;
+  display: flex;
+}
+.search-field {
+  width: 100%;
 }
 
+.search-form {
+  width: 100%;
+}
 .result-space {
   display: flex;
   flex: 1;
@@ -89,14 +101,19 @@
   padding-left: 0.2em;
 }
 
+.priority_and_version_block {
+  margin-left: 0.2em;
+}
+
 .bug-status {
   width: 5em;
   text-align: center;
 }
 
 .bug-severity {
-  margin: auto;
+  margin-right: 3px;
 }
+
 .bug-information {
   margin: auto;
   padding-top: 2px;
@@ -111,7 +128,7 @@
   padding-top: 5px;
 }
 
-.creator-form, .assigned-form {
+.creator-assigned-form {
   min-width: 18em;
   width: 100%;
 }
@@ -137,7 +154,6 @@
 .creator-image-empty, .assigned-image-empty {
   width: 3em;
   margin: auto;
-  display: flex;
   flex-shrink: 0;
   object-fit: cover;
 }
@@ -152,7 +168,7 @@ img.avatar-image {
 }
 
 .search-button {
-  margin: auto;
+  margin-left: 0.5em;
 }
 .count_chart {
   height: 0.5em;
@@ -165,5 +181,15 @@ img.avatar-image {
   width: 100%;
 }
 .priority-field {
-  max-width: 8em;
+  max-width: 5em;
+}
+.versions-field {
+  max-width: 6em;
+}
+.severity-block {
+  margin: auto;
+  display: inline-block;
+}
+.importence-block {
+  display: inline-flex;
 }
