--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -77,6 +77,12 @@
         </mat-form-field>
         </div>
       </div>
+      <div class="sorting-block">
+        <mat-slide-toggle
+        [formControl]="sortingControl"
+        (change)="change_sorting($event)"
+        [checked]="sorting_by_updated$ | async">Sorting by updated</mat-slide-toggle>
+        </div>
     </div>
     <mat-divider class="filter-block-divider" [vertical]="true"></mat-divider>
     <div class="filter-block">
