--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -149,8 +149,8 @@
       <div *ngIf="(currentCounts.all == currentCounts.hidden) && currentCounts.all !== 0">
         <h1>All bugs hidden. Try to clear quick search</h1>
       </div>
-      <cdk-virtual-scroll-viewport [itemSize]="50" class="result-list-view">
-        <mat-card (click)="get_details(bug)" [ngClass]="{'mat-elevation-z10': (bugDetail$ | async)?.id == bug.id}"
+      <cdk-virtual-scroll-viewport [itemSize]="50" class="result-list-view" *ngIf="(bugDetail$ | async) as bugDetail">
+        <mat-card (click)="(bugDetail.id !== bug.id)?get_details(bug):''" [ngClass]="{'mat-elevation-z10': bugDetail?.id == bug.id}"
           [ngStyle]="{'border-left': '0.3em solid ' + products[bug.product].color}" routerLinkActive="active"
           class="result-item" *cdkVirtualFor="let bug of bugs">
           <mat-icon class="bug-severity" matTooltip={{bug.severity}} aria-hidden="false"
