fix: add rel because it is more safer

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -27,7 +27,7 @@
           <div>
             <button mat-raised-button color="primary" [disabled] = buttonsDisableFlag>Sing in</button>
           </div>
-          <div style="text-align: end;"><a [href]=get_link_to_bugzilla_api() target="_blank">Generate API key</a></div>
+          <div style="text-align: end;"><a [href]=get_link_to_bugzilla_api() target="_blank" rel="noreferrer">Generate API key</a></div>
         </form>
       </mat-card-content>
     </mat-card>
