--- a/src/app/bug-details/detail-comment-text/detail-comment-text.component.html
+++ b/src/app/bug-details/detail-comment-text/detail-comment-text.component.html
@@ -1,7 +1,7 @@
 <ng-container [ngSwitch]="commentTextObjects.commentType">
   <div *ngSwitchCase="'push'">
     <div  style="display: flex;" >
-      <div class="github-image" matTooltip="[NEW TAB] {{this.commentTextObjects.objects[0].link}}"></div>
+      <div class="github-image"></div>
       <div class="github-text">
         {{this.commentTextObjects.objects[0].author}}
         pushed to
