--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -2,16 +2,16 @@
   <div class="actions-for-filter">
     <div class="filter-block">
       <div class="product-select-block">
-        <mat-card class="filter-item" (click)="change_product_active(product)" *ngFor="let product of productsArray$ | async"
+        <mat-card class="filter-item" (click)="change_product_active(product)"
+          *ngFor="let product of productsArray$ | async"
           [ngClass]="{'mat-elevation-z7': product.active, 'mat-elevation-z0': !product.active}"
-          [matTooltip]="'+ ' + product.addition?.join()"
-          [matTooltipDisabled]="!product.addition"
+          [matTooltip]="'+ ' + product.addition?.join()" [matTooltipDisabled]="!product.addition"
           [ngStyle]="{'background-color': product.active?product.color:'#e2e2e2'}">
           {{product.name}}
         </mat-card>
       </div>
       <div class="search-field-block">
-        <form class = "search-form">
+        <form class="search-form">
           <mat-form-field appearance="fill" class="search-field">
             <mat-label>Quick search</mat-label>
             <input matInput type="search" [formControl]="quickFilterControl" autocomplete="off">
@@ -36,7 +36,8 @@
     <mat-divider class="filter-block-divider" [vertical]="true"></mat-divider>
     <div class="filter-block">
       <div class="statuses-block">
-        <mat-card class="filter-item" (click)="change_status_active(status)" *ngFor="let status of statusesArray$ | async"
+        <mat-card class="filter-item" (click)="change_status_active(status)"
+          *ngFor="let status of statusesArray$ | async"
           [ngClass]="{'mat-elevation-z10 active': status.active, 'mat-elevation-z0': !status.active}"
           [ngStyle]="{'background-color': status.active?'white':'#e2e2e2'}">
           {{status.name}}
@@ -45,43 +46,44 @@
       <div class="importence-block">
         <div class="severity-block">
           <button mat-icon-button *ngFor="let severity of severitiesArray$ | async" class="bug-severity"
-          (click)="change_severity_active(severity)"
-          matTooltip={{severity.name}} [ngStyle]="{'color': severity.color}"
-          [ngClass]="{'mat-elevation-z7': severity.active, 'mat-elevation-z0': !severity.active}">
-          <mat-icon>{{severity.isFeature?"insights":"bug_report"}}</mat-icon>
+            (click)="change_severity_active(severity)" matTooltip={{severity.name}}
+            [ngStyle]="{'color': severity.color}"
+            [ngClass]="{'mat-elevation-z7': severity.active, 'mat-elevation-z0': !severity.active}">
+            <mat-icon>{{severity.isFeature?"insights":"bug_report"}}</mat-icon>
           </button>
         </div>
         <div class="priority_and_version_block">
           <mat-form-field class="priority-field">
-          <mat-label>Priority</mat-label>
-          <mat-select [formControl]="priorityControl" multiple>
-            <mat-select-trigger>
-              {{priorityControl.value ? priorityControl.value[0]?.name : ''}}
-              <span *ngIf="priorityControl.value?.length > 1">
-                (+{{priorityControl.value.length - 1}})
-              </span>
-            </mat-select-trigger>
-            <mat-option *ngFor="let priority of prioritiesArray$ | async" [value]="priority">{{priority.name}}</mat-option>
-          </mat-select>
-        </mat-form-field>
+            <mat-label>Priority</mat-label>
+            <mat-select [formControl]="priorityControl" multiple>
+              <mat-select-trigger>
+                {{priorityControl.value ? priorityControl.value[0]?.name : ''}}
+                <span *ngIf="priorityControl.value?.length > 1">
+                  (+{{priorityControl.value.length - 1}})
+                </span>
+              </mat-select-trigger>
+              <mat-option *ngFor="let priority of prioritiesArray$ | async" [value]="priority">{{priority.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <mat-form-field class="versions-field">
-          <mat-label>Versions</mat-label>
-          <mat-select [formControl]="versionControl" multiple>
-            <mat-select-trigger>
-              {{versionControl.value ? versionControl.value[0] : ''}}
-              <span *ngIf="versionControl.value?.length > 1">
-                (+{{versionControl.value.length - 1}})
-              </span>
-            </mat-select-trigger>
-            <mat-option *ngFor="let version of filteredVersions" [value]="version">{{version}}</mat-option>
-          </mat-select>
-        </mat-form-field>
+          <mat-form-field class="versions-field">
+            <mat-label>Versions</mat-label>
+            <mat-select [formControl]="versionControl" multiple>
+              <mat-select-trigger>
+                {{versionControl.value ? versionControl.value[0] : ''}}
+                <span *ngIf="versionControl.value?.length > 1">
+                  (+{{versionControl.value.length - 1}})
+                </span>
+              </mat-select-trigger>
+              <mat-option *ngFor="let version of filteredVersions" [value]="version">{{version}}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
       </div>
       <div class="sorting-block">
         <mat-slide-toggle [formControl]="sortingControl">Sorting by updated</mat-slide-toggle>
-        </div>
+      </div>
     </div>
     <mat-divider class="filter-block-divider" [vertical]="true"></mat-divider>
     <div class="filter-block">
@@ -97,14 +99,15 @@
             <input matInput
               [placeholder]="(settings.settingsData$ | async)?.comment_and_creator?'Creator or Commentator': 'Creator'"
               aria-label="Creator" [matAutocomplete]="auto" [formControl]="createrControl">
-              <mat-error>Field is ignored. Please, select user from list</mat-error>
+            <mat-error>Field is ignored. Please, select user from list</mat-error>
             <button mat-button *ngIf="createrControl.value" matSuffix mat-icon-button aria-label="Clear"
               (click)="createrControl.reset()">
               <mat-icon>close</mat-icon>
             </button>
             <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayUser">
               <mat-option *ngFor="let user of creators" [value]="user">
-                <img class="creator-image" aria-hidden [src]="user.avatar || '/assets/avatars/default.jpg'" height="25"  [hidden]="smallForm">
+                <img class="creator-image" aria-hidden [src]="user.avatar || '/assets/avatars/default.jpg'" height="25"
+                  [hidden]="smallForm">
                 <span>{{user.real_name}}</span>
               </mat-option>
             </mat-autocomplete>
@@ -123,14 +126,15 @@
           <mat-form-field class="assigned-field">
             <input matInput placeholder="Assigned To" aria-label="Assigned To" [matAutocomplete]="auto"
               [formControl]="assignedToControl">
-              <mat-error>Field is ignored. Please, select user from list</mat-error>
+            <mat-error>Field is ignored. Please, select user from list</mat-error>
             <button mat-button *ngIf="assignedToControl.value" matSuffix mat-icon-button aria-label="Clear"
               (click)="assignedToControl.reset()">
               <mat-icon>close</mat-icon>
             </button>
             <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayUser">
               <mat-option *ngFor="let user of assigneters" [value]="user">
-                <img class="creator-image" aria-hidden [src]="user.avatar || '/assets/avatars/default.jpg'" height="25" [hidden]="smallForm">
+                <img class="creator-image" aria-hidden [src]="user.avatar || '/assets/avatars/default.jpg'" height="25"
+                  [hidden]="smallForm">
                 <span>{{user.real_name}}</span>
               </mat-option>
             </mat-autocomplete>
@@ -151,35 +155,36 @@
         <h1>All bugs hidden. Try to clear quick search</h1>
       </div>
       <cdk-virtual-scroll-viewport [itemSize]="50" class="result-list-view" #bugList>
-        <a *cdkVirtualFor="let bug of bugs" onclick="return false" routerLink="/bug/{{bug.id}}" target="_blank" class="bug-list-link-wrapper">
+        <a *cdkVirtualFor="let bug of bugs" onclick="return false" routerLink="/bug/{{bug.id}}" target="_blank"
+          class="bug-list-link-wrapper">
           <mat-card (click)="get_details(bug)" [ngClass]="{'mat-elevation-z10': (bugDetail$ | async)?.id == bug.id}"
-          [ngStyle]="{'border-left': '0.4em solid ' + products[bug.product].color}" routerLinkActive="active"
-          class="result-item" >
-          <mat-icon class="bug-severity" matTooltip={{bug.severity}} aria-hidden="false"
-            [ngStyle]="{'color': severities[bug.severity]?.color, 'margin': 'auto'}">
-            {{severities[bug.severity]?.isFeature?"insights":"bug_report"}}</mat-icon>
-          <div class="bug-summary">
-            <span style="font-weight: 500;">{{bug.id}}</span>&nbsp;{{bug.summary}}
-          </div>
-          <div class="bug-priority">
-            <span *ngIf="bug.priority !== 'P1'">&nbsp;{{bug.priority}}</span>
-          </div>
-          <div mat-card-avatar class="avatar-image" matTooltip={{bug.creator_detail.real_name}}>
-            <img class="avatar-image"
-              [src]="(users$ | async)[bug.creator_detail.username.trim()]?.avatar || '/assets/avatars/default.jpg'">
-          </div>
-          <div class="arrow-forward">
-            <mat-icon>arrow_forward</mat-icon>
-          </div>
-          <div mat-card-avatar class="avatar-image" matTooltip={{bug.assigned_to_detail.real_name}}>
-            <img class="avatar-image"
-              [src]="(users$ | async)[bug.assigned_to_detail.username]?.avatar || '/assets/avatars/default.jpg'">
-          </div>
+            [ngStyle]="{'border-left': '0.4em solid ' + products[bug.product].color}" routerLinkActive="active"
+            class="result-item">
+            <mat-icon class="bug-severity" matTooltip={{bug.severity}} aria-hidden="false"
+              [ngStyle]="{'color': severities[bug.severity]?.color, 'margin': 'auto'}">
+              {{severities[bug.severity]?.isFeature?"insights":"bug_report"}}</mat-icon>
+            <div class="bug-summary">
+              <span style="font-weight: 500;">{{bug.id}}</span>&nbsp;{{bug.summary}}
+            </div>
+            <div class="bug-priority">
+              <span *ngIf="bug.priority !== 'P1'">&nbsp;{{bug.priority}}</span>
+            </div>
+            <div mat-card-avatar class="avatar-image" matTooltip={{bug.creator_detail.real_name}}>
+              <img class="avatar-image"
+                [src]="(users$ | async)[bug.creator_detail.username.trim()]?.avatar || '/assets/avatars/default.jpg'">
+            </div>
+            <div class="arrow-forward">
+              <mat-icon>arrow_forward</mat-icon>
+            </div>
+            <div mat-card-avatar class="avatar-image" matTooltip={{bug.assigned_to_detail.real_name}}>
+              <img class="avatar-image"
+                [src]="(users$ | async)[bug.assigned_to_detail.username]?.avatar || '/assets/avatars/default.jpg'">
+            </div>
 
-          <div class="bug-status" style="margin: auto;">
-            <span>&nbsp;{{bug.buguetteStatus}}</span>
-          </div>
-        </mat-card>
+            <div class="bug-status" style="margin: auto;">
+              <span>&nbsp;{{bug.buguetteStatus}}</span>
+            </div>
+          </mat-card>
         </a>
 
       </cdk-virtual-scroll-viewport>
