--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -201,7 +201,7 @@
 <mat-menu #actionMenu="matMenu">
   <button mat-menu-item (click)="sorting_control_toogle()">
     <mat-icon>{{sortingControl.value?"toggle_on":"toggle_off"}}</mat-icon>
-    <span>Sort by updated_at</span>
+    <span>Sorting by updated</span>
   </button>
   <button mat-menu-item (click)="clear_filters()">
     <mat-icon>delete_forever</mat-icon>
