change sotring icon to checkbox because it is looks good
Rita say -"it is not easy to mean what status is it"

--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -201,7 +201,7 @@
 <a href="" target="_blank" hidden #newTabElement></a>
 <mat-menu #actionMenu="matMenu">
   <button mat-menu-item (click)="sorting_control_toogle()">
-    <mat-icon>{{sortingControl.value?"toggle_on":"toggle_off"}}</mat-icon>
+    <mat-icon>{{sortingControl.value?"check_box":"check_box_outline_blank"}}</mat-icon>
     <span>Sorting by updated</span>
   </button>
   <button mat-menu-item (click)="keep_bookmark()">
