--- a/src/app/bug-details/bug-details.component.html
+++ b/src/app/bug-details/bug-details.component.html
@@ -32,26 +32,26 @@
         </div>
         <div class="addition-params-data">
           <div class="params-data">
-            Creator: {{bug.creator_detail.real_name || "loading..."}}
+            Creator: {{bug.creator_detail.realName || "loading..."}}
           </div>
           <div class="params-data">
             Assigned to:
-            {{bug.assigned_to_detail?bug.assigned_to_detail?.real_name:bug.assigned_to}}
+            {{bug.assigned_to_detail?bug.assigned_to_detail?.realName:bug.assigned_to}}
           </div>
         </div>
       </div>
       <div class="addition-params">
         <div class="addition-params-icon"
-         matTooltip="Created: {{bug.creation_time.getTime() | date : 'd MMMM y, HH:mm'}}&#13;Updated: {{bug.last_change_time.getTime() | date : 'd MMMM y, HH:mm'}}">
+         matTooltip="Created: {{bug.creationTime.getTime() | date : 'd MMMM y, HH:mm'}}&#13;Updated: {{bug.last_change_time.getTime() | date : 'd MMMM y, HH:mm'}}">
           <mat-icon aria-hidden="false" aria-label="Example home icon"  matTooltipClass="multiline-tooltip">
             date_range
           </mat-icon>
         </div>
         <div class="addition-params-data">
           <div class="params-data">
-            {{bug.creation_time.getTime() | date : 'd MMMM y'}}
+            {{bug.creationTime.getTime() | date : 'd MMMM y'}}
           </div>
-          <div class="params-data" *ngIf="bug.last_change_time.getTime() !== bug.creation_time.getTime()">
+          <div class="params-data" *ngIf="bug.last_change_time.getTime() !== bug.creationTime.getTime()">
             {{bug.last_change_time.getTime() | date : 'd MMMM y'}}
           </div>
         </div>
@@ -84,14 +84,14 @@
   <div class="left-block-comment">
     <ng-container *ngIf="(users$ | async) as users">
     <div class="creator-image" *ngIf="users[comment.creator_username] as user">
-      <img class="avatar-image" matTooltip={{user.real_name}} [src]="user.avatar || '/assets/avatars/default.jpg'">
+      <img class="avatar-image" matTooltip={{user.realName}} [src]="user.avatar || '/assets/avatars/default.jpg'">
     </div>
     <span *ngIf="!users[comment.creator_username]" matTooltip="User not found">{{comment.creator_username}}</span>
     </ng-container>
   </div>
   <div class="right-block-comment">
     <div class="comment-date">
-      {{comment.creation_time.getTime() | date : 'd MMMM y, HH:mm'}}
+      {{comment.creationTime.getTime() | date : 'd MMMM y, HH:mm'}}
     </div>
     <app-detail-attachment
     [id]="comment.attachment_id"
