--- a/src/app/bug-details/detail-attachment/detail-attachment.component.html
+++ b/src/app/bug-details/detail-attachment/detail-attachment.component.html
@@ -2,16 +2,16 @@
   <div class="attachment" *ngIf="id">
     <mat-progress-bar mode="query" *ngIf="loading"></mat-progress-bar>
     <div [ngClass]="{'attachment_space_for_loading': !loading}">
-      <button mat-icon-button matTooltip="Download {{bugData.attachment_name}}" (click)="download_attachment(id)">
+      <button mat-icon-button matTooltip="Download {{bugData.attachmentName}}" (click)="download_attachment(id)">
         <mat-icon>attachment</mat-icon>
       </button>
-      {{bugData.attachment_name}}
+      {{bugData.attachmentName}}
     </div>
   </div>
 </ng-container>
 <ng-container *ngIf="images[id] && imageAutoload">
   <div class="attachment">
-    <span style="text-align: center;">{{bugData.attachment_name}}</span>
+    <span style="text-align: center;">{{bugData.attachmentName}}</span>
     <img class="attachment-image" [src]="images[id]">
   </div>
 </ng-container>
